# WinMemHack

./: .gitignore  CMakeLists.txt  README.md  auto_compiling.py  func.c  main.c
MT/: func.c  functions.h
MemoryScanner/: main.c  ms.h
include/: InitVFile.h  MemoryScanner.h  MemoryThread.h
src/: MemoryScanner.c  MemoryThread.c  main.c
